# splink_examples_synthetic_data

./: .gitignore  README.md  jobrunner.py  pyproject.toml
cluster_generation/person/uk_citizens_max_groupsize_20/basic/01_cluster/: job.py
cluster_generation/person/uk_citizens_max_groupsize_20/splink_1_all_comparisons/01_cluster/: job.py
cluster_generation/person/uk_citizens_max_groupsize_20/splink_2_all_comparisons/01_cluster/: job.py
edge_generation/person/uk_citizens_max_groupsize_20/basic/: job.py
edge_generation/person/uk_citizens_max_groupsize_20/basic/glue_resources/: model.json
edge_generation/person/uk_citizens_max_groupsize_20/splink_1_all_comparisons/: job.py
edge_generation/person/uk_citizens_max_groupsize_20/splink_1_all_comparisons/glue_resources/: model.json
edge_generation/person/uk_citizens_max_groupsize_20/splink_2_all_comparisons/: job.py
job_configs/: uk_citizens_max_groupsize_20.py  uk_citizens_max_groupsize_20_splink_v1.py  uk_citizens_max_groupsize_20_splink_v2.py
job_runner_utils/: run_job.py
local_utils/: clickabe_glue.py  clickable_s3.py
pipelines/uk_citizens_max_groupsize_20/person/basic/: pipeline.sh
pipelines/uk_citizens_max_groupsize_20/person/splink_1_all_comparisons/: pipeline.sh
pipelines/uk_citizens_max_groupsize_20/person/splink_2_all_comparisons/: pipeline.sh
qa/cluster_truth/person/uk_citizens_max_groupsize_20/basic/: job.py
shared_job_resources/glue_py_resources/: clickable_path.py  cluster_utils.py  constants.py  custom_logger.py  github_zip_urls.txt  lineage.py  postcode_location.py  spark_config.py
(+25 files in other folders)
